apps/syndicatemail/ui/war/SyndicateMailFE.css
/** Add css rules here for your application. */


/** Example rules used by the template application (remove for your app) */
h1 {
  font-size: 2em;
  font-weight: bold;
  color: #777777;
  margin: 40px 0px 70px;
  text-align: center;
}

.sendButton {
  display: block;
  font-size: 16pt;
}

/** Most GWT widgets already have a style name defined */
.gwt-DialogBox {
  width: 400px;
}

.dialogVPanel {
  margin: 5px;
}

.serverResponseLabelError {
  color: red;
}

.body-theme {
	background-image: url(background.jpg);
}

/** Set ids using widget.getElement().setId("idOfElement") */
#closeButton {
  margin: 15px 6px 6px;
}


table.mainTbl {
	background-color: transparent;
	border-radius: 3px;
	margin-left: 20px;
	margin-right: 20px;
	padding: 5px;
	width: 100%;
}

table.mainTbl td {
	vertical-align: top;
}

table.inboxTbl {
	border-collapse: collapse;
	background-color: white;
	opacity: 0.75;
	width:100%;
}

table.inboxTbl td {
	border-top:	1px solid #CCCCCC;
	font-weight: bolder;
	font-family: sans-serif;
}

table.inboxTbl tr:hover {
	background-color: #F5F5F5;
	cursor: pointer;
}

table.dir-list-panel {
	border-collapse: collapse;
	background-color: white;
	opacity: 0.75;
	padding: 0px;
}

.inbox_dir_lbl {
	font-weight: bolder!important;
	font-family: sans-serif;
	font-size: 15px;
	color: red;
	cursor: pointer;
}

.outbox_dir_lbl {
	font-weight: bolder;
	font-size: 15px;
	font-family: sans-serif;
	cursor: pointer;
}

button.compose_button {
	font-weight: bold;
	font-size: 16px;
	font-family: sans-serif;
	color: white;
	background-color: #C70B0B;
	border-radius: 2px;
	width: 120px;
	height: 40px;
	box-shadow: none;
	text-transform: uppercase;
	text-align: center;
	outline: 0px;
	padding: 0 8px;
	border: 1px solid transparent;
}

button.compose_button:hover {
	background-color: red;
}

button.delete-button {
	font-weight: bold;
	font-size: 16px;
	font-family: sans-serif;
	color: black;
	border-radius: 2px;
	width: 90px;
	height: 40px;
	box-shadow: none;
	text-transform: uppercase;
	text-align: center;
	outline: 0px;
	padding: 0 8px; 
	float: right;
	background-color: rgb(240, 173, 0);
	border: 1px solid transparent;
}

button.delete-button:hover {
	background-color: rgb(53, 39, 9);
	color: #CCCCCC;
}

.compose-title {
	background-color: black;
	height: 30px;
	opacity: 0.8;
	padding: 5px;
}

.header-panel {
	background-color: white;
}

.body-panel {
	background-color: white;
	padding: 0px;
	border-collapse: collapse;
}


.button-panel {
	background-color: white;
	padding: 2px;	
	vertical-align: left;
}

.button-panel td{
	float: left;
	padding: 5px;
}

.gwt-HTML.compose-caption {
	color: white;
	vertical-align: middle;
	font-weight: bolder;
}

.gwt-HTML.compose-close-button {
	color: white;
	float: right;
	vertical-align: middle;
	cursor: pointer;
}

.compose-dlg {
	border-radius: 2px;
	border-bottom: 1px solid transparent;
	border-left: 1px solid transparent;
	border-right: 1px solid transparent;
	outline: 0px;
	/*background-color: inherit;*/
}

.gwt-TextBox.rcpt-txt-box {
	outline: 0px;
	border: 1px solid transparent;
}

.gwt-TextBox.subject-txt-box {
	outline: 0px;
	border: 1px solid transparent;
}

.email-body {
	outline: 0px;
	border: 2px solid;
	border-color: #CCCCCC;
}

button.send-button:hover {
	background-color: red;
}

button.send-button {
	font-weight: bold;
	font-size: 13px;
	font-family: sans-serif;
	color: white;
	background-color: #3399FF;
	border-radius: 2px;
	width: 70px;
	height: 30px;
	box-shadow: none;
	text-align: center;
	outline: 0px;
	padding: 0 8px;
	border: 1px solid transparent;
}

.mail-display-panel {
	background-color: transparent;
}

.mail-display-panel td {
	padding: 0px;
}

.mail-display-sbjlbl {
	font-weight: 600;
	font-size: 20px;
	color: black;
	border-bottom: 1px solid #CCCCCC;
	padding-bottom: 10px;
	background-color: white;
	opacity: 0.75;
}

.mail-display-sndrlbl {
	font-weight: bolder;
	font-family: sans-serif;
	color: black;
	padding-bottom: 10px;
	padding-top:  10px
	background-color: white;
	opacity: 0.8;
}

.mail-display-body {
	border: 0px;
	resize: none;
	color: black;
	font-size: 13px;
	background-color: white;
	opacity: 0.9;
}

.box-item-checkbox input {
	border-radius: 0px;
	box-shadow: none;
}

.mail-display-control-panel {
	width: 100%;
	border-bottom: 1px solid #CCCCCC;
	background-color: white;
	opacity: 0.85;
}

.mail-display-action-panel {
	/*width: 20%;*/
	float: right;
}

.mail-display-meta-panel {
	/*width: 80%;*/
	float: left;
}

button.mail-display-reply-btn {
	font-weight: bold;
	font-size: 13px;
	font-family: sans-serif;
	color: black;
	background-color: #FF9900;/*#FFCC00;#3399FF;*/
	border-radius: 2px;
	width: 70px;
	height: 30px;
	box-shadow: none;
	text-align: center;
	outline: 0px;
	padding: 0 8px;
	border: 1px solid transparent;
}

button.mail-display-reply-btn:hover {
	background-color: red;
}

.mail-display-rcptlist {
	width: 100%;
	outline: 0px;
	border: 1px solid transparent;
	padding: 0px;
	font-family: sans-serif;
	color: grey;
}

.mail-display-rcptlbl {
	font-family: sans-serif;
	outline: 0px;
	border: 1px solid transparent;
	font-weight: bold;
	color: grey;
	padding: 0px;
	cursor: default;
}

.mail-display-rcpt-panel {
	width: 100%;
}

.mail-display-rcpt-panel td {
	float: left;
	padding: 0px;
}

.maild-display-show-addrs {
	font-family: sans-serif;
	outline: 0px;
	border: 1px solid transparent;
	font-weight: bold;
	color: grey;
	padding: 0px;
	cursor: pointer;
}

.file-upload-attachment {
	font-family: sans-serif;
	outline: 0px;
	border: 1px solid transparent;
	font-weight: bold;
	color: grey;
	padding: 0px;
	cursor: pointer;
}
 
 .attach-button {
    background-image: url(attach-icon.png);
    background-repeat: no-repeat;
    background-position: center;
    background-color: transparent;
    background-size: 25px 25px;
	color: white;
	background-color: white;
	border-radius: 2px;
	width: 30px;
	height: 30px;
	box-shadow: none;
	outline: 0px;
	padding: 0 8px;
	border: 2px solid transparent;
	float: left;
 }
 
 .attach-button:hover {
 	background-color: #CCCCCC;
 }

.attach-indicator-lbl{
    background-image: url(attach-icon.png);
    background-repeat: no-repeat;
    background-position: center;
    background-color: transparent;
    background-size: 20px 20px;
	width: 20px;
	height: 20px;
 }


.mail-display-attach-indicator-lbl {
	background-image: url(attach-icon.png);
    background-repeat: no-repeat;
    background-position: center;
    background-color: transparent;
    background-size:30px 30px;
	width: 30px;
	height: 30px;
	float: right;
	cursor: pointer;
}

.mail-display-attach-indicator-lbl-min {
	background-image: url(attach-icon.png);
    background-repeat: no-repeat;
    background-position: center;
    background-color: transparent;
    background-size:20px 20px;
	width: 20px;
	height: 20px;
	float: right;
	cursor: pointer;
}

.mail-display-attachment {
	width: 100%;
	outline: 0px;
	border: 1px solid transparent;
	padding: 0px;
	font-family: sans-serif;
	color: grey;
	cursor: pointer;
}

.mail-read-font {
	font-weight: normal;
}

.attachments-panel {
	background-color: white;
	padding: 3px;
	border-spacing: 2px;
}

.attachment-panle {
	border-radius: 5px;
	border: 2px solid #CCCCCC;	
	outline: 2px;
	white-space: nowrap;
	width: 100%;
	padding: 3px;
	align-vertical: center;
	background: #F2F2F2;
	
}

.delatt-lbl {
	float: right;
	cursor: pointer;
	font-family: sans-serif;
	font-weight: bolder;
	align-vertical: center;
	padding: 3px;
	font-size: 12px;
}

.attchment-lbl {
	float: left;
	align-vertical: center;
	padding: 3px;
	font-size: 12px;
	font-weight: bolder;
	font-family: sans-serif;
}

.glass-theme {
	background-color: transparent;
	border-radius: 3px;
	margin-left:20px;
	margin-right: 20px;
	padding: 5px;
}

.glass-theme td {
	padding: 2px;
}

table td {
	padding-left:0px;
	padding-right:0px;
}

